Issue #29000: Fixed bytes formatting of octals with zero padding in alternate form.